Refactoring code, updating thigs

--- a/documentation/checkstyle/site/xref/allclasses-frame.html
+++ b/documentation/checkstyle/site/xref/allclasses-frame.html
@@ -30,6 +30,9 @@
 				<a href="kjarkko/stardust/logic/Scheduler.html" target="classFrame">Scheduler</a>
 			</li>
 						<li>
+				<a href="kjarkko/stardust/logic/Settings.html" target="classFrame">Settings</a>
+			</li>
+						<li>
 				<a href="kjarkko/stardust/logic/Vector.html" target="classFrame">Vector</a>
 			</li>
 			      </ul>
