--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/package-frame.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/package-frame.html
@@ -31,6 +31,9 @@
             	<a href="Scheduler.html" target="classFrame">Scheduler</a>
           	</li>
           	          	<li>
+            	<a href="Settings.html" target="classFrame">Settings</a>
+          	</li>
+          	          	<li>
             	<a href="Vector.html" target="classFrame">Vector</a>
           	</li>
           	      	</ul>
