--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/package-summary.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/package-summary.html
@@ -62,6 +62,11 @@
             	</tr>
 				            	<tr>
               		<td>
+                		<a href="Settings.html" target="classFrame">Settings</a>
+              		</td>
+            	</tr>
+				            	<tr>
+              		<td>
                 		<a href="Vector.html" target="classFrame">Vector</a>
               		</td>
             	</tr>
