--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/FileReader.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/FileReader.html
@@ -74,21 +74,21 @@
 <a class="jxr_linenumber" name="L66" href="#L66">66</a>          <strong class="jxr_keyword">try</strong> {
 <a class="jxr_linenumber" name="L67" href="#L67">67</a>              radius = Double.parseDouble(values[1]);
 <a class="jxr_linenumber" name="L68" href="#L68">68</a>              mass = Double.parseDouble(values[2]);
-<a class="jxr_linenumber" name="L69" href="#L69">69</a>  
+<a class="jxr_linenumber" name="L69" href="#L69">69</a>              
 <a class="jxr_linenumber" name="L70" href="#L70">70</a>              String[] loc = values[3].split(<span class="jxr_string">"-"</span>);
 <a class="jxr_linenumber" name="L71" href="#L71">71</a>              <strong class="jxr_keyword">double</strong> x = Double.parseDouble(loc[0]);
 <a class="jxr_linenumber" name="L72" href="#L72">72</a>              <strong class="jxr_keyword">double</strong> y = Double.parseDouble(loc[1]);
 <a class="jxr_linenumber" name="L73" href="#L73">73</a>              location = <strong class="jxr_keyword">new</strong> <a href="../../../kjarkko/stardust/logic/Coordinate.html">Coordinate</a>(x, y);
-<a class="jxr_linenumber" name="L74" href="#L74">74</a>  
+<a class="jxr_linenumber" name="L74" href="#L74">74</a>              
 <a class="jxr_linenumber" name="L75" href="#L75">75</a>              String[] mv = values[4].split(<span class="jxr_string">"-"</span>);
 <a class="jxr_linenumber" name="L76" href="#L76">76</a>              x = Double.parseDouble(mv[0]);
 <a class="jxr_linenumber" name="L77" href="#L77">77</a>              y = Double.parseDouble(mv[1]);
 <a class="jxr_linenumber" name="L78" href="#L78">78</a>              movement = <strong class="jxr_keyword">new</strong> <a href="../../../kjarkko/stardust/logic/Vector.html">Vector</a>(x, y);
-<a class="jxr_linenumber" name="L79" href="#L79">79</a>  
+<a class="jxr_linenumber" name="L79" href="#L79">79</a>              
 <a class="jxr_linenumber" name="L80" href="#L80">80</a>              color = Color.decode(values[5]);
 <a class="jxr_linenumber" name="L81" href="#L81">81</a>              name = values[6];
 <a class="jxr_linenumber" name="L82" href="#L82">82</a>          } <strong class="jxr_keyword">catch</strong> (Exception e) {
-<a class="jxr_linenumber" name="L83" href="#L83">83</a>              System.out.println(<span class="jxr_string">"Error parsing line: "</span> + line + <span class="jxr_string">"\nMessage: "</span> + e);
+<a class="jxr_linenumber" name="L83" href="#L83">83</a>              System.out.println(<span class="jxr_string">"Error parsing line: "</span> + line + <span class="jxr_string">"\nMessage: "</span> + e.getLocalizedMessage());
 <a class="jxr_linenumber" name="L84" href="#L84">84</a>              <strong class="jxr_keyword">return</strong> <strong class="jxr_keyword">null</strong>;
 <a class="jxr_linenumber" name="L85" href="#L85">85</a>          }
 <a class="jxr_linenumber" name="L86" href="#L86">86</a>  
