--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Planets.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Planets.html
@@ -28,51 +28,42 @@
 <a class="jxr_linenumber" name="L20" href="#L20">20</a>  
 <a class="jxr_linenumber" name="L21" href="#L21">21</a>      <em class="jxr_comment">/*--------------------------------------------*/</em>
 <a class="jxr_linenumber" name="L22" href="#L22">22</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">final</strong> ArrayList&lt;Planet&gt; planets;
-<a class="jxr_linenumber" name="L23" href="#L23">23</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">int</strong> planetIdCounter;
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>  
-<a class="jxr_linenumber" name="L25" href="#L25">25</a>      <strong class="jxr_keyword">protected</strong> <a href="../../../kjarkko/stardust/logic/Planets.html">Planets</a>() {
-<a class="jxr_linenumber" name="L26" href="#L26">26</a>          planets = <strong class="jxr_keyword">new</strong> ArrayList();
-<a class="jxr_linenumber" name="L27" href="#L27">27</a>          planetIdCounter = 0;
-<a class="jxr_linenumber" name="L28" href="#L28">28</a>      }
-<a class="jxr_linenumber" name="L29" href="#L29">29</a>  
-<a class="jxr_linenumber" name="L30" href="#L30">30</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> add(<a href="../../../kjarkko/stardust/logic/Planet.html">Planet</a> p) {
-<a class="jxr_linenumber" name="L31" href="#L31">31</a>          <strong class="jxr_keyword">if</strong> (p != <strong class="jxr_keyword">null</strong>) {
-<a class="jxr_linenumber" name="L32" href="#L32">32</a>              planets.add(p);
-<a class="jxr_linenumber" name="L33" href="#L33">33</a>              planetIdCounter++;
-<a class="jxr_linenumber" name="L34" href="#L34">34</a>          }
-<a class="jxr_linenumber" name="L35" href="#L35">35</a>      }
-<a class="jxr_linenumber" name="L36" href="#L36">36</a>  
-<a class="jxr_linenumber" name="L37" href="#L37">37</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> addAll(Collection&lt;Planet&gt; c) {
-<a class="jxr_linenumber" name="L38" href="#L38">38</a>          c.forEach((p) -&gt; add(p));
-<a class="jxr_linenumber" name="L39" href="#L39">39</a>      }
-<a class="jxr_linenumber" name="L40" href="#L40">40</a>  
-<a class="jxr_linenumber" name="L41" href="#L41">41</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">boolean</strong> remove(<strong class="jxr_keyword">int</strong> id) {
-<a class="jxr_linenumber" name="L42" href="#L42">42</a>          <strong class="jxr_keyword">return</strong> planets.removeIf((p) -&gt; p.id == id);
-<a class="jxr_linenumber" name="L43" href="#L43">43</a>      }
-<a class="jxr_linenumber" name="L44" href="#L44">44</a>  
-<a class="jxr_linenumber" name="L45" href="#L45">45</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> getPlanetIdCounter() {
-<a class="jxr_linenumber" name="L46" href="#L46">46</a>          <strong class="jxr_keyword">return</strong> planetIdCounter;
-<a class="jxr_linenumber" name="L47" href="#L47">47</a>      }
-<a class="jxr_linenumber" name="L48" href="#L48">48</a>  
-<a class="jxr_linenumber" name="L49" href="#L49">49</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">void</strong> calculateForce(<a href="../../../kjarkko/stardust/logic/Planet.html">Planet</a> p1, <a href="../../../kjarkko/stardust/logic/Planet.html">Planet</a> p2) {
-<a class="jxr_linenumber" name="L50" href="#L50">50</a>          <em class="jxr_comment">// add force to vectors of both planets</em>
-<a class="jxr_linenumber" name="L51" href="#L51">51</a>          <strong class="jxr_keyword">throw</strong> <strong class="jxr_keyword">new</strong> UnsupportedOperationException(<span class="jxr_string">"not implemented yet."</span>);
-<a class="jxr_linenumber" name="L52" href="#L52">52</a>      }
-<a class="jxr_linenumber" name="L53" href="#L53">53</a>  
-<a class="jxr_linenumber" name="L54" href="#L54">54</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> updateLocations(<strong class="jxr_keyword">int</strong> elapsedTime) {
-<a class="jxr_linenumber" name="L55" href="#L55">55</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> i = 0; i &lt; planets.size(); i++) {
-<a class="jxr_linenumber" name="L56" href="#L56">56</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> j = i + 1; j &lt; planets.size(); j++) {
-<a class="jxr_linenumber" name="L57" href="#L57">57</a>                  calculateForce(planets.get(i), planets.get(j));
-<a class="jxr_linenumber" name="L58" href="#L58">58</a>              }
-<a class="jxr_linenumber" name="L59" href="#L59">59</a>          }
-<a class="jxr_linenumber" name="L60" href="#L60">60</a>  
-<a class="jxr_linenumber" name="L61" href="#L61">61</a>          planets.forEach((p) -&gt; p.updateLocation(elapsedTime));
-<a class="jxr_linenumber" name="L62" href="#L62">62</a>      }
-<a class="jxr_linenumber" name="L63" href="#L63">63</a>  
-<a class="jxr_linenumber" name="L64" href="#L64">64</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> getSize() {
-<a class="jxr_linenumber" name="L65" href="#L65">65</a>          <strong class="jxr_keyword">return</strong> planets.size();
-<a class="jxr_linenumber" name="L66" href="#L66">66</a>      }
-<a class="jxr_linenumber" name="L67" href="#L67">67</a>  }
+<a class="jxr_linenumber" name="L23" href="#L23">23</a>  
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>      <strong class="jxr_keyword">private</strong> <a href="../../../kjarkko/stardust/logic/Planets.html">Planets</a>() {
+<a class="jxr_linenumber" name="L25" href="#L25">25</a>          planets = <strong class="jxr_keyword">new</strong> ArrayList();
+<a class="jxr_linenumber" name="L26" href="#L26">26</a>      }
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>  
+<a class="jxr_linenumber" name="L28" href="#L28">28</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> add(<a href="../../../kjarkko/stardust/logic/Planet.html">Planet</a> p) {
+<a class="jxr_linenumber" name="L29" href="#L29">29</a>          <strong class="jxr_keyword">if</strong> (p != <strong class="jxr_keyword">null</strong>) {
+<a class="jxr_linenumber" name="L30" href="#L30">30</a>              planets.add(p);
+<a class="jxr_linenumber" name="L31" href="#L31">31</a>          }
+<a class="jxr_linenumber" name="L32" href="#L32">32</a>      }
+<a class="jxr_linenumber" name="L33" href="#L33">33</a>  
+<a class="jxr_linenumber" name="L34" href="#L34">34</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> addAll(Collection&lt;Planet&gt; c) {
+<a class="jxr_linenumber" name="L35" href="#L35">35</a>          c.removeIf(p -&gt; p == <strong class="jxr_keyword">null</strong>);
+<a class="jxr_linenumber" name="L36" href="#L36">36</a>          planets.addAll(c);
+<a class="jxr_linenumber" name="L37" href="#L37">37</a>      }
+<a class="jxr_linenumber" name="L38" href="#L38">38</a>  
+<a class="jxr_linenumber" name="L39" href="#L39">39</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> remove(<strong class="jxr_keyword">int</strong> id) {
+<a class="jxr_linenumber" name="L40" href="#L40">40</a>          planets.removeIf((p) -&gt; p.id == id);
+<a class="jxr_linenumber" name="L41" href="#L41">41</a>      }
+<a class="jxr_linenumber" name="L42" href="#L42">42</a>  
+<a class="jxr_linenumber" name="L43" href="#L43">43</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> calculateForces() {
+<a class="jxr_linenumber" name="L44" href="#L44">44</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> i = 0; i &lt; planets.size(); i++) {
+<a class="jxr_linenumber" name="L45" href="#L45">45</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> j = i + 1; j &lt; planets.size(); j++) {
+<a class="jxr_linenumber" name="L46" href="#L46">46</a>                  planets.get(i).gravitationalForce(planets.get(j));
+<a class="jxr_linenumber" name="L47" href="#L47">47</a>              }
+<a class="jxr_linenumber" name="L48" href="#L48">48</a>          }
+<a class="jxr_linenumber" name="L49" href="#L49">49</a>      }
+<a class="jxr_linenumber" name="L50" href="#L50">50</a>  
+<a class="jxr_linenumber" name="L51" href="#L51">51</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> updateLocations(<strong class="jxr_keyword">int</strong> elapsedTime) {
+<a class="jxr_linenumber" name="L52" href="#L52">52</a>          planets.forEach(p -&gt; p.updateLocation(elapsedTime));
+<a class="jxr_linenumber" name="L53" href="#L53">53</a>      }
+<a class="jxr_linenumber" name="L54" href="#L54">54</a>  
+<a class="jxr_linenumber" name="L55" href="#L55">55</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> getSize() {
+<a class="jxr_linenumber" name="L56" href="#L56">56</a>          <strong class="jxr_keyword">return</strong> planets.size();
+<a class="jxr_linenumber" name="L57" href="#L57">57</a>      }
+<a class="jxr_linenumber" name="L58" href="#L58">58</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2016. All rights reserved.</div>
