--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Planets.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Planets.html
@@ -48,22 +48,29 @@
 <a class="jxr_linenumber" name="L40" href="#L40">40</a>          planets.removeIf((p) -&gt; p.id == id);
 <a class="jxr_linenumber" name="L41" href="#L41">41</a>      }
 <a class="jxr_linenumber" name="L42" href="#L42">42</a>  
-<a class="jxr_linenumber" name="L43" href="#L43">43</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> calculateForces() {
-<a class="jxr_linenumber" name="L44" href="#L44">44</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> i = 0; i &lt; planets.size(); i++) {
-<a class="jxr_linenumber" name="L45" href="#L45">45</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> j = i + 1; j &lt; planets.size(); j++) {
-<a class="jxr_linenumber" name="L46" href="#L46">46</a>                  planets.get(i).gravitationalForce(planets.get(j));
-<a class="jxr_linenumber" name="L47" href="#L47">47</a>              }
-<a class="jxr_linenumber" name="L48" href="#L48">48</a>          }
-<a class="jxr_linenumber" name="L49" href="#L49">49</a>      }
-<a class="jxr_linenumber" name="L50" href="#L50">50</a>  
-<a class="jxr_linenumber" name="L51" href="#L51">51</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> updateLocations(<strong class="jxr_keyword">int</strong> elapsedTime) {
-<a class="jxr_linenumber" name="L52" href="#L52">52</a>          planets.forEach(p -&gt; p.updateLocation(elapsedTime));
-<a class="jxr_linenumber" name="L53" href="#L53">53</a>      }
-<a class="jxr_linenumber" name="L54" href="#L54">54</a>  
-<a class="jxr_linenumber" name="L55" href="#L55">55</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> getSize() {
-<a class="jxr_linenumber" name="L56" href="#L56">56</a>          <strong class="jxr_keyword">return</strong> planets.size();
-<a class="jxr_linenumber" name="L57" href="#L57">57</a>      }
-<a class="jxr_linenumber" name="L58" href="#L58">58</a>  }
+<a class="jxr_linenumber" name="L43" href="#L43">43</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> update() {
+<a class="jxr_linenumber" name="L44" href="#L44">44</a>          calculateForces();
+<a class="jxr_linenumber" name="L45" href="#L45">45</a>          updateLocations(Settings.getElapsedTime());
+<a class="jxr_linenumber" name="L46" href="#L46">46</a>      }
+<a class="jxr_linenumber" name="L47" href="#L47">47</a>  
+<a class="jxr_linenumber" name="L48" href="#L48">48</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> calculateForces() {
+<a class="jxr_linenumber" name="L49" href="#L49">49</a>          <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> i = 0; i &lt; planets.size(); i++) {
+<a class="jxr_linenumber" name="L50" href="#L50">50</a>              <strong class="jxr_keyword">for</strong> (<strong class="jxr_keyword">int</strong> j = i + 1; j &lt; planets.size(); j++) {
+<a class="jxr_linenumber" name="L51" href="#L51">51</a>                  <a href="../../../kjarkko/stardust/logic/Vector.html">Vector</a> f = planets.get(i).gravitationalForce(planets.get(j));
+<a class="jxr_linenumber" name="L52" href="#L52">52</a>                  planets.get(i).getTempForce().addVector(f);
+<a class="jxr_linenumber" name="L53" href="#L53">53</a>                  planets.get(j).getTempForce().addVector(f.createNegative());
+<a class="jxr_linenumber" name="L54" href="#L54">54</a>              }
+<a class="jxr_linenumber" name="L55" href="#L55">55</a>          }
+<a class="jxr_linenumber" name="L56" href="#L56">56</a>      }
+<a class="jxr_linenumber" name="L57" href="#L57">57</a>  
+<a class="jxr_linenumber" name="L58" href="#L58">58</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">void</strong> updateLocations(<strong class="jxr_keyword">int</strong> elapsedTime) {
+<a class="jxr_linenumber" name="L59" href="#L59">59</a>          planets.forEach(p -&gt; p.updateLocation(elapsedTime));
+<a class="jxr_linenumber" name="L60" href="#L60">60</a>      }
+<a class="jxr_linenumber" name="L61" href="#L61">61</a>  
+<a class="jxr_linenumber" name="L62" href="#L62">62</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">int</strong> size() {
+<a class="jxr_linenumber" name="L63" href="#L63">63</a>          <strong class="jxr_keyword">return</strong> planets.size();
+<a class="jxr_linenumber" name="L64" href="#L64">64</a>      }
+<a class="jxr_linenumber" name="L65" href="#L65">65</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2016. All rights reserved.</div>
