--- a/documentation/pit/201604082151/kjarkko.stardust.logic/index.html
+++ b/documentation/pit/201604082151/kjarkko.stardust.logic/index.html
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>6</td>
-            <td>51% <div class="coverage_bar"><div class="coverage_complete" style="width:51%"></div><div class="coverage_ledgend">72/141</div></div></td>
-            <td>37% <div class="coverage_bar"><div class="coverage_complete" style="width:37%"></div><div class="coverage_ledgend">29/79</div></div></td>
+            <td>7</td>
+            <td>48% <div class="coverage_bar"><div class="coverage_complete" style="width:48%"></div><div class="coverage_ledgend">83/174</div></div></td>
+            <td>40% <div class="coverage_bar"><div class="coverage_complete" style="width:40%"></div><div class="coverage_ledgend">37/93</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -93,8 +93,8 @@
 
         <tr>
             <td><a href="./Coordinate.java.html">Coordinate.java</a></td>
-            <td><div class="coveragePercentage">91% </div><div class="coverage_bar"><div class="coverage_complete" style="width:91%"></div><div class="coverage_ledgend">10/11</div></div></td>
-            <td><div class="coveragePercentage">33% </div><div class="coverage_bar"><div class="coverage_complete" style="width:33%"></div><div class="coverage_ledgend">2/6</div></div></td>
+            <td><div class="coveragePercentage">59% </div><div class="coverage_bar"><div class="coverage_complete" style="width:59%"></div><div class="coverage_ledgend">10/17</div></div></td>
+            <td><div class="coveragePercentage">33% </div><div class="coverage_bar"><div class="coverage_complete" style="width:33%"></div><div class="coverage_ledgend">4/12</div></div></td>
         </tr>
 
         <tr>
@@ -105,14 +105,20 @@
 
         <tr>
             <td><a href="./Planet.java.html">Planet.java</a></td>
-            <td><div class="coveragePercentage">57% </div><div class="coverage_bar"><div class="coverage_complete" style="width:57%"></div><div class="coverage_ledgend">20/35</div></div></td>
-            <td><div class="coveragePercentage">38% </div><div class="coverage_bar"><div class="coverage_complete" style="width:38%"></div><div class="coverage_ledgend">10/26</div></div></td>
+            <td><div class="coveragePercentage">87% </div><div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">27/31</div></div></td>
+            <td><div class="coveragePercentage">71% </div><div class="coverage_bar"><div class="coverage_complete" style="width:71%"></div><div class="coverage_ledgend">15/21</div></div></td>
         </tr>
 
         <tr>
             <td><a href="./Planets.java.html">Planets.java</a></td>
-            <td><div class="coveragePercentage">52% </div><div class="coverage_bar"><div class="coverage_complete" style="width:52%"></div><div class="coverage_ledgend">12/23</div></div></td>
-            <td><div class="coveragePercentage">28% </div><div class="coverage_bar"><div class="coverage_complete" style="width:28%"></div><div class="coverage_ledgend">5/18</div></div></td>
+            <td><div class="coveragePercentage">43% </div><div class="coverage_bar"><div class="coverage_complete" style="width:43%"></div><div class="coverage_ledgend">12/28</div></div></td>
+            <td><div class="coveragePercentage">24% </div><div class="coverage_bar"><div class="coverage_complete" style="width:24%"></div><div class="coverage_ledgend">5/21</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./Scheduler.java.html">Scheduler.java</a></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/26</div></div></td>
+            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/10</div></div></td>
         </tr>
 
         <tr>
@@ -123,8 +129,8 @@
 
         <tr>
             <td><a href="./Vector.java.html">Vector.java</a></td>
-            <td><div class="coveragePercentage">71% </div><div class="coverage_bar"><div class="coverage_complete" style="width:71%"></div><div class="coverage_ledgend">10/14</div></div></td>
-            <td><div class="coveragePercentage">78% </div><div class="coverage_bar"><div class="coverage_complete" style="width:78%"></div><div class="coverage_ledgend">7/9</div></div></td>
+            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">14/14</div></div></td>
+            <td><div class="coveragePercentage">89% </div><div class="coverage_bar"><div class="coverage_complete" style="width:89%"></div><div class="coverage_ledgend">8/9</div></div></td>
         </tr>
 
      </tbody>
