--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Scheduler.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Scheduler.html
@@ -37,7 +37,7 @@
 <a class="jxr_linenumber" name="L29" href="#L29">29</a>      }
 <a class="jxr_linenumber" name="L30" href="#L30">30</a>  
 <a class="jxr_linenumber" name="L31" href="#L31">31</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">boolean</strong> updateFreqHasChanged() {
-<a class="jxr_linenumber" name="L32" href="#L32">32</a>          <strong class="jxr_keyword">return</strong> taskFreq != Settings.getPlanetUpdateFrequencyMS();
+<a class="jxr_linenumber" name="L32" href="#L32">32</a>          <strong class="jxr_keyword">return</strong> taskFreq != Settings.getPlanetUpdateRateMS();
 <a class="jxr_linenumber" name="L33" href="#L33">33</a>      }
 <a class="jxr_linenumber" name="L34" href="#L34">34</a>  
 <a class="jxr_linenumber" name="L35" href="#L35">35</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> start() {
@@ -60,7 +60,7 @@
 <a class="jxr_linenumber" name="L52" href="#L52">52</a>      }
 <a class="jxr_linenumber" name="L53" href="#L53">53</a>  
 <a class="jxr_linenumber" name="L54" href="#L54">54</a>      <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> newTask() {
-<a class="jxr_linenumber" name="L55" href="#L55">55</a>          taskFreq = Settings.getPlanetUpdateFrequencyMS();
+<a class="jxr_linenumber" name="L55" href="#L55">55</a>          taskFreq = Settings.getPlanetUpdateRateMS();
 <a class="jxr_linenumber" name="L56" href="#L56">56</a>          TIMER.scheduleAtFixedRate(TASK, 0, taskFreq);
 <a class="jxr_linenumber" name="L57" href="#L57">57</a>      }
 <a class="jxr_linenumber" name="L58" href="#L58">58</a>  }
