--- a/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Settings.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/logic/Settings.html
@@ -15,39 +15,49 @@
 <a class="jxr_linenumber" name="L7" href="#L7">7</a>       <strong class="jxr_keyword">private</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> simulationSpeedMultiplier;
 <a class="jxr_linenumber" name="L8" href="#L8">8</a>   
 <a class="jxr_linenumber" name="L9" href="#L9">9</a>       <strong class="jxr_keyword">static</strong> {
-<a class="jxr_linenumber" name="L10" href="#L10">10</a>          screenRefreshRateMS = 17; <em class="jxr_comment">// Approximately 60Hz</em>
-<a class="jxr_linenumber" name="L11" href="#L11">11</a>          planetUpdateRateMS = 5;
-<a class="jxr_linenumber" name="L12" href="#L12">12</a>          simulationSpeedMultiplier = 1;
-<a class="jxr_linenumber" name="L13" href="#L13">13</a>      }
-<a class="jxr_linenumber" name="L14" href="#L14">14</a>  
-<a class="jxr_linenumber" name="L15" href="#L15">15</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getRefreshRateMS() {
-<a class="jxr_linenumber" name="L16" href="#L16">16</a>          <strong class="jxr_keyword">return</strong> screenRefreshRateMS;
+<a class="jxr_linenumber" name="L10" href="#L10">10</a>          setDefault();
+<a class="jxr_linenumber" name="L11" href="#L11">11</a>      }
+<a class="jxr_linenumber" name="L12" href="#L12">12</a>  
+<a class="jxr_linenumber" name="L13" href="#L13">13</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setDefault() {
+<a class="jxr_linenumber" name="L14" href="#L14">14</a>          screenRefreshRateMS = 17; <em class="jxr_comment">// Approximately 60Hz</em>
+<a class="jxr_linenumber" name="L15" href="#L15">15</a>          planetUpdateRateMS = 5;
+<a class="jxr_linenumber" name="L16" href="#L16">16</a>          simulationSpeedMultiplier = 1;
 <a class="jxr_linenumber" name="L17" href="#L17">17</a>      }
 <a class="jxr_linenumber" name="L18" href="#L18">18</a>  
-<a class="jxr_linenumber" name="L19" href="#L19">19</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getPlanetUpdateFrequencyMS() {
-<a class="jxr_linenumber" name="L20" href="#L20">20</a>          <strong class="jxr_keyword">return</strong> planetUpdateRateMS;
+<a class="jxr_linenumber" name="L19" href="#L19">19</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getScreenRefreshRateMS() {
+<a class="jxr_linenumber" name="L20" href="#L20">20</a>          <strong class="jxr_keyword">return</strong> screenRefreshRateMS;
 <a class="jxr_linenumber" name="L21" href="#L21">21</a>      }
 <a class="jxr_linenumber" name="L22" href="#L22">22</a>  
-<a class="jxr_linenumber" name="L23" href="#L23">23</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getSimulationSpeedMultiplier() {
-<a class="jxr_linenumber" name="L24" href="#L24">24</a>          <strong class="jxr_keyword">return</strong> simulationSpeedMultiplier;
+<a class="jxr_linenumber" name="L23" href="#L23">23</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getPlanetUpdateRateMS() {
+<a class="jxr_linenumber" name="L24" href="#L24">24</a>          <strong class="jxr_keyword">return</strong> planetUpdateRateMS;
 <a class="jxr_linenumber" name="L25" href="#L25">25</a>      }
 <a class="jxr_linenumber" name="L26" href="#L26">26</a>  
-<a class="jxr_linenumber" name="L27" href="#L27">27</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setRefreshRateMS(<strong class="jxr_keyword">int</strong> refreshRateMS) {
-<a class="jxr_linenumber" name="L28" href="#L28">28</a>          Settings.screenRefreshRateMS = refreshRateMS;
+<a class="jxr_linenumber" name="L27" href="#L27">27</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getSimulationSpeedMultiplier() {
+<a class="jxr_linenumber" name="L28" href="#L28">28</a>          <strong class="jxr_keyword">return</strong> simulationSpeedMultiplier;
 <a class="jxr_linenumber" name="L29" href="#L29">29</a>      }
 <a class="jxr_linenumber" name="L30" href="#L30">30</a>  
-<a class="jxr_linenumber" name="L31" href="#L31">31</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setPlanetUpdateFrequencyMS(<strong class="jxr_keyword">int</strong> planetUpdateRateMS) {
-<a class="jxr_linenumber" name="L32" href="#L32">32</a>          Settings.planetUpdateRateMS = planetUpdateRateMS;
-<a class="jxr_linenumber" name="L33" href="#L33">33</a>      }
-<a class="jxr_linenumber" name="L34" href="#L34">34</a>  
-<a class="jxr_linenumber" name="L35" href="#L35">35</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setSimulationSpeedMultiplier(<strong class="jxr_keyword">int</strong> simulationSpeedMultiplier) {
-<a class="jxr_linenumber" name="L36" href="#L36">36</a>          Settings.simulationSpeedMultiplier = simulationSpeedMultiplier;
-<a class="jxr_linenumber" name="L37" href="#L37">37</a>      }
-<a class="jxr_linenumber" name="L38" href="#L38">38</a>  
-<a class="jxr_linenumber" name="L39" href="#L39">39</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getElapsedTime() {
-<a class="jxr_linenumber" name="L40" href="#L40">40</a>          <strong class="jxr_keyword">return</strong> simulationSpeedMultiplier / planetUpdateRateMS;
+<a class="jxr_linenumber" name="L31" href="#L31">31</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setScreenRefreshRateMS(<strong class="jxr_keyword">int</strong> screenRefreshRateMS) {
+<a class="jxr_linenumber" name="L32" href="#L32">32</a>          <strong class="jxr_keyword">if</strong> (screenRefreshRateMS &gt; 0) {
+<a class="jxr_linenumber" name="L33" href="#L33">33</a>              Settings.screenRefreshRateMS = screenRefreshRateMS;
+<a class="jxr_linenumber" name="L34" href="#L34">34</a>          }
+<a class="jxr_linenumber" name="L35" href="#L35">35</a>      }
+<a class="jxr_linenumber" name="L36" href="#L36">36</a>  
+<a class="jxr_linenumber" name="L37" href="#L37">37</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setPlanetUpdateRateMS(<strong class="jxr_keyword">int</strong> planetUpdateRateMS) {
+<a class="jxr_linenumber" name="L38" href="#L38">38</a>          <strong class="jxr_keyword">if</strong> (planetUpdateRateMS &gt; 0) {
+<a class="jxr_linenumber" name="L39" href="#L39">39</a>              Settings.planetUpdateRateMS = planetUpdateRateMS;
+<a class="jxr_linenumber" name="L40" href="#L40">40</a>          }
 <a class="jxr_linenumber" name="L41" href="#L41">41</a>      }
-<a class="jxr_linenumber" name="L42" href="#L42">42</a>  }
+<a class="jxr_linenumber" name="L42" href="#L42">42</a>  
+<a class="jxr_linenumber" name="L43" href="#L43">43</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">void</strong> setSimulationSpeedMultiplier(<strong class="jxr_keyword">int</strong> simulationSpeedMultiplier) {
+<a class="jxr_linenumber" name="L44" href="#L44">44</a>          <strong class="jxr_keyword">if</strong> (simulationSpeedMultiplier &gt; 0) {
+<a class="jxr_linenumber" name="L45" href="#L45">45</a>              Settings.simulationSpeedMultiplier = simulationSpeedMultiplier;
+<a class="jxr_linenumber" name="L46" href="#L46">46</a>          }
+<a class="jxr_linenumber" name="L47" href="#L47">47</a>      }
+<a class="jxr_linenumber" name="L48" href="#L48">48</a>  
+<a class="jxr_linenumber" name="L49" href="#L49">49</a>      <strong class="jxr_keyword">public</strong> <strong class="jxr_keyword">static</strong> <strong class="jxr_keyword">int</strong> getElapsedTimeMS() {
+<a class="jxr_linenumber" name="L50" href="#L50">50</a>          <strong class="jxr_keyword">return</strong> (simulationSpeedMultiplier * 1000) / planetUpdateRateMS;
+<a class="jxr_linenumber" name="L51" href="#L51">51</a>      }
+<a class="jxr_linenumber" name="L52" href="#L52">52</a>  }
 </pre>
 <hr/>
 <div id="footer">Copyright &#169; 2016. All rights reserved.</div>
