Javadoc, attempted to create a GUI

--- a/documentation/checkstyle/site/xref/allclasses-frame.html
+++ b/documentation/checkstyle/site/xref/allclasses-frame.html
@@ -12,16 +12,22 @@
 
 		<ul>
 						<li>
-				<a href="kjarkko/stardust/logic/Coordinate.html" target="classFrame">Coordinate</a>
+				<a href="kjarkko/stardust/util/Coordinate.html" target="classFrame">Coordinate</a>
 			</li>
 						<li>
-				<a href="kjarkko/stardust/logic/FileReader.html" target="classFrame">FileReader</a>
+				<a href="kjarkko/stardust/util/FileReader.html" target="classFrame">FileReader</a>
 			</li>
 						<li>
 				<a href="kjarkko/stardust/Main.html" target="classFrame">Main</a>
 			</li>
 						<li>
+				<a href="kjarkko/stardust/gui/MainWindow.html" target="classFrame">MainWindow</a>
+			</li>
+						<li>
 				<a href="kjarkko/stardust/logic/Planet.html" target="classFrame">Planet</a>
+			</li>
+						<li>
+				<a href="kjarkko/stardust/gui/PlanetCanvas.html" target="classFrame">PlanetCanvas</a>
 			</li>
 						<li>
 				<a href="kjarkko/stardust/logic/Planets.html" target="classFrame">Planets</a>
@@ -33,7 +39,10 @@
 				<a href="kjarkko/stardust/logic/Settings.html" target="classFrame">Settings</a>
 			</li>
 						<li>
-				<a href="kjarkko/stardust/logic/Vector.html" target="classFrame">Vector</a>
+				<a href="kjarkko/stardust/gui/StartWindow.html" target="classFrame">StartWindow</a>
+			</li>
+						<li>
+				<a href="kjarkko/stardust/util/Vector.html" target="classFrame">Vector</a>
 			</li>
 			      </ul>
 
