--- a/documentation/checkstyle/site/xref/overview-frame.html
+++ b/documentation/checkstyle/site/xref/overview-frame.html
@@ -19,7 +19,13 @@
 				<a href="kjarkko/stardust/package-frame.html" target="packageFrame">kjarkko.stardust</a>
 			</li>
 						<li>
+				<a href="kjarkko/stardust/gui/package-frame.html" target="packageFrame">kjarkko.stardust.gui</a>
+			</li>
+						<li>
 				<a href="kjarkko/stardust/logic/package-frame.html" target="packageFrame">kjarkko.stardust.logic</a>
+			</li>
+						<li>
+				<a href="kjarkko/stardust/util/package-frame.html" target="packageFrame">kjarkko.stardust.util</a>
 			</li>
 					</ul>
 
