--- a/documentation/checkstyle/site/xref/overview-summary.html
+++ b/documentation/checkstyle/site/xref/overview-summary.html
@@ -40,7 +40,17 @@
             	</tr>
 	          	            	<tr>
               		<td>
+                		<a href="kjarkko/stardust/gui/package-summary.html">kjarkko.stardust.gui</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
                 		<a href="kjarkko/stardust/logic/package-summary.html">kjarkko.stardust.logic</a>
+              		</td>
+            	</tr>
+	          	            	<tr>
+              		<td>
+                		<a href="kjarkko/stardust/util/package-summary.html">kjarkko.stardust.util</a>
               		</td>
             	</tr>
 	          	        	</tbody>
