--- a/documentation/pit/201604152300/index.html
+++ b/documentation/pit/201604152300/index.html
@@ -73,8 +73,8 @@
     <tbody>
         <tr>
             <td>7</td>
-            <td>72% <div class="coverage_bar"><div class="coverage_complete" style="width:72%"></div><div class="coverage_ledgend">127/177</div></div></td>
-            <td>70% <div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">62/88</div></div></td>
+            <td>71% <div class="coverage_bar"><div class="coverage_complete" style="width:71%"></div><div class="coverage_ledgend">126/178</div></div></td>
+            <td>70% <div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">62/89</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -94,9 +94,16 @@
 
         <tr>
             <td><a href="./kjarkko.stardust.logic/index.html">kjarkko.stardust.logic</a></td>
-            <td>7</td>
-            <td><div class="coveragePercentage">72% </div><div class="coverage_bar"><div class="coverage_complete" style="width:72%"></div><div class="coverage_ledgend">127/177</div></div></td>
-            <td><div class="coveragePercentage">70% </div><div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">62/88</div></div></td>
+            <td>4</td>
+            <td><div class="coveragePercentage">63% </div><div class="coverage_bar"><div class="coverage_complete" style="width:63%"></div><div class="coverage_ledgend">62/99</div></div></td>
+            <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">36/54</div></div></td>
+        </tr>
+
+        <tr>
+            <td><a href="./kjarkko.stardust.util/index.html">kjarkko.stardust.util</a></td>
+            <td>3</td>
+            <td><div class="coveragePercentage">81% </div><div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">64/79</div></div></td>
+            <td><div class="coveragePercentage">74% </div><div class="coverage_bar"><div class="coverage_complete" style="width:74%"></div><div class="coverage_ledgend">26/35</div></div></td>
         </tr>
 
      </tbody>
