--- a/documentation/checkstyle/site/xref/kjarkko/stardust/util/package-frame.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/util/package-frame.html
@@ -3,29 +3,26 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Stardust 1.0-SNAPSHOT Reference Package kjarkko.stardust.logic</title>
+		<title>Stardust 1.0-SNAPSHOT Reference Package kjarkko.stardust.util</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
 
 		<h3>
-        	<a href="package-summary.html" target="classFrame">kjarkko.stardust.logic</a>
+        	<a href="package-summary.html" target="classFrame">kjarkko.stardust.util</a>
       	</h3>
 
       	<h3>Classes</h3>
 
       	<ul>
       		          	<li>
-            	<a href="Planet.html" target="classFrame">Planet</a>
+            	<a href="Coordinate.html" target="classFrame">Coordinate</a>
           	</li>
           	          	<li>
-            	<a href="Planets.html" target="classFrame">Planets</a>
+            	<a href="FileReader.html" target="classFrame">FileReader</a>
           	</li>
           	          	<li>
-            	<a href="Scheduler.html" target="classFrame">Scheduler</a>
-          	</li>
-          	          	<li>
-            	<a href="Settings.html" target="classFrame">Settings</a>
+            	<a href="Vector.html" target="classFrame">Vector</a>
           	</li>
           	      	</ul>
 
