--- a/documentation/checkstyle/site/xref/kjarkko/stardust/util/package-summary.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/util/package-summary.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" lang="en">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-		<title>Stardust 1.0-SNAPSHOT Reference Package kjarkko.stardust.logic</title>
+		<title>Stardust 1.0-SNAPSHOT Reference Package kjarkko.stardust.util</title>
 		<link rel="stylesheet" type="text/css" href="../../../stylesheet.css" title="style" />
 	</head>
 	<body>
@@ -26,7 +26,7 @@
         	</ul>
       	</div>
 		
-		      	<h2>Package kjarkko.stardust.logic</h2>
+		      	<h2>Package kjarkko.stardust.util</h2>
 
 		<table class="summary">
         	<thead>
@@ -37,22 +37,17 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="Planet.html" target="classFrame">Planet</a>
+                		<a href="Coordinate.html" target="classFrame">Coordinate</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="Planets.html" target="classFrame">Planets</a>
+                		<a href="FileReader.html" target="classFrame">FileReader</a>
               		</td>
             	</tr>
 				            	<tr>
               		<td>
-                		<a href="Scheduler.html" target="classFrame">Scheduler</a>
-              		</td>
-            	</tr>
-				            	<tr>
-              		<td>
-                		<a href="Settings.html" target="classFrame">Settings</a>
+                		<a href="Vector.html" target="classFrame">Vector</a>
               		</td>
             	</tr>
 				        	</tbody>
