--- a/documentation/pit/201604152300/kjarkko.stardust.util/index.html
+++ b/documentation/pit/201604152300/kjarkko.stardust.util/index.html
@@ -61,7 +61,7 @@
 
 <h1>Pit Test Coverage Report</h1>
 <h2>Package Summary</h2>
-<h3>kjarkko.stardust.logic</h3>
+<h3>kjarkko.stardust.util</h3>
 <table>
     <thead>
         <tr>
@@ -72,9 +72,9 @@
     </thead>
     <tbody>
         <tr>
-            <td>7</td>
-            <td>72% <div class="coverage_bar"><div class="coverage_complete" style="width:72%"></div><div class="coverage_ledgend">127/177</div></div></td>
-            <td>70% <div class="coverage_bar"><div class="coverage_complete" style="width:70%"></div><div class="coverage_ledgend">62/88</div></div></td>
+            <td>3</td>
+            <td>81% <div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">64/79</div></div></td>
+            <td>74% <div class="coverage_bar"><div class="coverage_complete" style="width:74%"></div><div class="coverage_ledgend">26/35</div></div></td>
         </tr>
     </tbody>
 </table>
@@ -101,30 +101,6 @@
             <td><a href="./FileReader.java.html">FileReader.java</a></td>
             <td><div class="coveragePercentage">67% </div><div class="coverage_bar"><div class="coverage_complete" style="width:67%"></div><div class="coverage_ledgend">31/46</div></div></td>
             <td><div class="coveragePercentage">50% </div><div class="coverage_bar"><div class="coverage_complete" style="width:50%"></div><div class="coverage_ledgend">8/16</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Planet.java.html">Planet.java</a></td>
-            <td><div class="coveragePercentage">87% </div><div class="coverage_bar"><div class="coverage_complete" style="width:87%"></div><div class="coverage_ledgend">27/31</div></div></td>
-            <td><div class="coveragePercentage">76% </div><div class="coverage_bar"><div class="coverage_complete" style="width:76%"></div><div class="coverage_ledgend">16/21</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Planets.java.html">Planets.java</a></td>
-            <td><div class="coveragePercentage">81% </div><div class="coverage_bar"><div class="coverage_complete" style="width:81%"></div><div class="coverage_ledgend">17/21</div></div></td>
-            <td><div class="coveragePercentage">80% </div><div class="coverage_bar"><div class="coverage_complete" style="width:80%"></div><div class="coverage_ledgend">8/10</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Scheduler.java.html">Scheduler.java</a></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/26</div></div></td>
-            <td><div class="coveragePercentage">0% </div><div class="coverage_bar"><div class="coverage_complete" style="width:0%"></div><div class="coverage_ledgend">0/10</div></div></td>
-        </tr>
-
-        <tr>
-            <td><a href="./Settings.java.html">Settings.java</a></td>
-            <td><div class="coveragePercentage">95% </div><div class="coverage_bar"><div class="coverage_complete" style="width:95%"></div><div class="coverage_ledgend">19/20</div></div></td>
-            <td><div class="coveragePercentage">100% </div><div class="coverage_bar"><div class="coverage_complete" style="width:100%"></div><div class="coverage_ledgend">12/12</div></div></td>
         </tr>
 
         <tr>
