--- a/documentation/checkstyle/site/xref/allclasses-frame.html
+++ b/documentation/checkstyle/site/xref/allclasses-frame.html
@@ -12,6 +12,9 @@
 
 		<ul>
 						<li>
+				<a href="kjarkko/stardust/gui/ControlPanel.html" target="classFrame">ControlPanel</a>
+			</li>
+						<li>
 				<a href="kjarkko/stardust/util/Coordinate.html" target="classFrame">Coordinate</a>
 			</li>
 						<li>
@@ -19,9 +22,6 @@
 			</li>
 						<li>
 				<a href="kjarkko/stardust/Main.html" target="classFrame">Main</a>
-			</li>
-						<li>
-				<a href="kjarkko/stardust/gui/MainWindow.html" target="classFrame">MainWindow</a>
 			</li>
 						<li>
 				<a href="kjarkko/stardust/logic/Planet.html" target="classFrame">Planet</a>
