--- a/documentation/checkstyle/site/xref/kjarkko/stardust/gui/package-frame.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/gui/package-frame.html
@@ -16,7 +16,7 @@
 
       	<ul>
       		          	<li>
-            	<a href="MainWindow.html" target="classFrame">MainWindow</a>
+            	<a href="ControlPanel.html" target="classFrame">ControlPanel</a>
           	</li>
           	          	<li>
             	<a href="PlanetCanvas.html" target="classFrame">PlanetCanvas</a>
