--- a/documentation/checkstyle/site/xref/kjarkko/stardust/gui/package-summary.html
+++ b/documentation/checkstyle/site/xref/kjarkko/stardust/gui/package-summary.html
@@ -37,7 +37,7 @@
         	<tbody>
         		            	<tr>
               		<td>
-                		<a href="MainWindow.html" target="classFrame">MainWindow</a>
+                		<a href="ControlPanel.html" target="classFrame">ControlPanel</a>
               		</td>
             	</tr>
 				            	<tr>
